--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,12 @@
 
     </style>
 
+    <style name="license_theme" parent="@style/Theme.AppCompat.Light.Dialog">
+
+        <item name="android:textColor">#000000</item>
+
+    </style>
+
     <style name="primary_red">
 
         <item name="colorPrimary">@color/red</item>
