--- a/app/src/main/res/layout/fragment_classes.xml
+++ b/app/src/main/res/layout/fragment_classes.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<FrameLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:focusableInTouchMode="true"
-    android:orientation="vertical">
+    android:focusableInTouchMode="true">
 
     <android.support.v7.widget.CardView
 
@@ -40,4 +39,4 @@
         android:paddingTop="12dp"
         android:visibility="gone" />
 
-</RelativeLayout>
+</FrameLayout>
