--- a/app/src/main/res/layout/view_list_child.xml
+++ b/app/src/main/res/layout/view_list_child.xml
@@ -8,13 +8,24 @@
     android:layoutDirection="ltr"
     android:minHeight="52dp">
 
+    <ImageView
+
+        android:id="@+id/view_list_child_color_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/color_indicator_list" />
+
     <TextView
 
         android:id="@+id/view_list_child_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:layout_marginRight="8dp"
+        android:layout_toLeftOf="@id/view_list_child_color_indicator"
+        android:gravity="right"
         android:textSize="12sp" />
 
     <TextView
